--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
    "outputs": [],
    "source": [
     "# Import train_test_split\n",
-    "from skelar\n",
+    "from sklearn.pr\n",
     "\n",
     "# Split data into X and y\n",
     "y = None\n",
