--- a/index.ipynb
+++ b/index.ipynb
@@ -220,10 +220,10 @@
    "outputs": [],
    "source": [
     "# Import train_test_split\n",
-    "from sklearn.model_selection import tra\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split data into X and y\n",
-    "y = None\n",
+    "y = df['ta']\n",
     "X = None\n",
     "\n",
     "# Split the data into a training and a test set\n",
