Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,10 +224,10 @@
     "\n",
     "# Split data into X and y\n",
     "y = df['target']\n",
-    "X = df.drop(['target'])\n",
+    "X = df.drop(columns=['target'])\n",
     "\n",
     "# Split the data into a training and a test set\n",
-    "X_train, X_test, y_train, y_test = None"
+    "X_train, X_test, y_train, y_test = df"
    ]
   },
   {
