--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "X = df.drop(columns=['target'])\n",
     "\n",
     "# Split the data into a training and a test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size)"
    ]
   },
   {
