--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
     "X = df.drop(columns=['target'])\n",
     "\n",
     "# Split the data into a training and a test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=.25,random_state=0)"
    ]
   },
   {
