Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "# Import LogisticRegression\n",
-    "\n",
+    "from sklearn.\n",
     "\n",
     "# Instantiate LogisticRegression\n",
     "logreg = None\n",
