--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "# Import LogisticRegression\n",
-    "from sklearn.\n",
+    "from sklearn.linear_model import L\n",
     "\n",
     "# Instantiate LogisticRegression\n",
     "logreg = None\n",
