Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,10 +248,10 @@
    "outputs": [],
    "source": [
     "# Import LogisticRegression\n",
-    "from sklearn.linear_model import L\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Instantiate LogisticRegression\n",
-    "logreg = None\n",
+    "logreg = LogisticRegression()\n",
     "\n",
     "# Fit to training data\n",
     "model_log = None\n",
