Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Instantiate LogisticRegression\n",
-    "logreg = LogisticRegression()\n",
+    "logreg = LogisticRegression(solver='liblinear')\n",
     "\n",
     "# Fit to training data\n",
     "model_log = None\n",
