Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
     "logreg = LogisticRegression(solver='liblinear')\n",
     "\n",
     "# Fit to training data\n",
-    "model_log = logreg.fit\n",
+    "model_log = logreg.fit(X_train)\n",
     "model_log"
    ]
   },
