--- a/index.ipynb
+++ b/index.ipynb
@@ -243,9 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='liblinear', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import LogisticRegression\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -254,7 +269,7 @@
     "logreg = LogisticRegression(solver='liblinear')\n",
     "\n",
     "# Fit to training data\n",
-    "model_log = logreg.fit(X_train)\n",
+    "model_log = logreg.fit(X_train,y_train)\n",
     "model_log"
    ]
   },
